Mon Mar  8 00:33:17 CET 2004 (tk)
---------------------------------
  * clamd: fixed QUIT/SHUTDOWN command - break blocking accept() to allow
	   immediate termination

Sun Mar  7 23:29:25 CET 2004 (tk)
---------------------------------
  * Makefiles: allow building outside of the source tree (thanks to Philippe
	       Gay <ph.gay*free.fr>)
  * libclamav: improved checking for sscanf matching failure (thanks to
	       Dirk Mueller <mueller*kde.org>)
  * libclamav: fixed a typo in unrarlib (Dirk Mueller)
  * libclamav: fixed detection of encrypted zip archives (Dirk Mueller)
  * clamscan: pass libclamav options to checkfile() (bug introduced a few
	      days ago, found by Dirk Mueller <mueller*kde.org>)
  * clamd: fixed TemporaryDirectory option (don't call free() on putenv()'ed
	   variable). Thanks to Andrey Cherezov <andrey*cherezov.koenig.su>.

Sun Mar  7 15:19:51 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Fixed minor typo in bounce message
    clamav-milter:		Added extra information to --headers

Sun Mar  7 12:40:05 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Added new bounce delimeter (thanks to Dirk
	  Mueller <mueller*kde.org>)
	  Removed a warning generated by icc

Fri Mar  5 14:25:52 CET 2004 (tk)
---------------------------------
  * configure: check for a safe value of FD_SETSIZE for select() and check for
	       poll() (patch from Trog)

Thu Mar  4 15:54:25 CET 2004 (tk)
---------------------------------
  * clamdscan: do not overwrite s_addr (thanks to Adam Stein
	       <adam*scan.mc.xerox.com>)

Thu Mar  4 13:07:04 GMT 2004 (njh)
----------------------------------
  * libclamav:	Some bounce messages weren't being rescanned, fix thanks
	to "Andrey J. Melnikoff (TEMHOTA)" <temnota*kmv.ru>

Thu Mar  4 03:29:07 CET 2004 (tk)
---------------------------------
  * libclamav: CL_ENCRYPTED: mark encrypted Zip archives as a virus type