@@ -72,6 +72,7 @@ Hrvoje Habjanic <hrvoje.habjanic*zg.hinet.hr>
 Robert Hogan <robert*roberthogan.net>
 James F.  Hranicky <jfh*cise.ufl.edu>
 Andy Igoshin <ai*vsu.ru>
+Jesper Juhl <juhl*dif.dk>
 Nicholas M. Kirsch <nick*kirsch.org>
 Robbert Kouprie <robbert*exx.nl>
 Martin Kraft <martin.kraft*fal.de>
