@@ -1,3 +1,8 @@
+Mon Mar  8 01:24:37 CET 2004 (tk)
+---------------------------------
+  * applied comments cleanup (C89) patch (global) from Jesper Juhl
+    <juhl*dif.dk>
+
 Mon Mar  8 00:33:17 CET 2004 (tk)
 ---------------------------------
   * clamd: fixed QUIT/SHUTDOWN command - break blocking accept() to allow
